Bug 1706132 - Suppress the ErrorResult in EventCounts::EventCounts r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D114122