dom/performance/EventCounts.cpp
@@ -63,6 +63,7 @@ EventCounts::EventCounts(nsISupports* aParent) : mParent(aParent) {
     EventCounts_Binding::MaplikeHelpers::Set(
         this, NS_ConvertUTF8toUTF16(Event::GetEventName(eventType)), 0, rv);
     if (NS_WARN_IF(rv.Failed())) {
+      rv.SuppressException();
 #ifdef DEBUG
       nsCOMPtr<nsIGlobalObject> global = do_QueryInterface(GetParentObject());
       if (global) {
